<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.SettingFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/secret_feed_back"
        android:alpha="0.2"/>
    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/home"
        android:text="@string/menu"
        android:textSize="40sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/head2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/secret"
        android:gravity="right"
        android:text="@string/settingstag"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded" />

    <GridLayout
        android:layout_below="@id/head2"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center"
        android:columnCount="1"
        android:rowCount="1"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="#50FFFFFF" />
        <Button
            android:id="@+id/rateUs"
            android:layout_margin="3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:text="@string/rate"
            android:textAllCaps="false"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/feedback"
            android:layout_margin="3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:text="@string/feedback"
            android:textAllCaps="false"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/privacyPolicy"
            android:layout_margin="3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:text="@string/privacy"
            android:textAllCaps="false"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/termsOfUse"
            android:layout_margin="3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:text="@string/terms"
            android:textAllCaps="false"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/about"
            android:layout_margin="3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/home"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textSize="25sp"
            />
    </GridLayout>

</RelativeLayout>