<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
tools:context=".Confession.SecretsWriteFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/take_secret_back"
        android:alpha="0.2"/>
<TextView
    android:id="@+id/head"
    android:text="@string/secretHead"
    android:textSize="20sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="100dp"
    android:gravity="center"
    android:fontFamily="@font/home"/>
<TextView
    android:gravity="center"
    android:text="@string/charLimit"
    android:textSize="15sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_gravity="bottom|center"
    android:fontFamily="@font/secret"
    android:layout_marginBottom="50dp"/>

<EditText
    android:id="@+id/secret"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/round_stop"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/secret"
    android:inputType="textMultiLine"
    android:textAllCaps="false"
    android:textColorHint="#20000000"
    tools:ignore="TextContrastCheck"
    android:importantForAutofill="no" />

<Button
    android:id="@+id/ButtonConfess"
    android:layout_width="150dp"
    android:layout_height="48dp"
    android:layout_gravity="bottom|center"
    android:layout_marginBottom="100dp"
    android:background="@drawable/round_button"
    android:fontFamily="@font/home"
    android:gravity="center"
    android:text="@string/confessButton"
    android:textAllCaps="false"
    android:textColor="#000000" />

<Button
    android:id="@+id/ButtonRules"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_gravity="bottom|right"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/ic_baseline_privacy_tip_24"
    android:gravity="center"
    tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />
</FrameLayout>