<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confession.SecretsRulesFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/take_secret_back"
        android:alpha="0.2"/>
    <TextView
        android:id="@+id/head"
        android:gravity="center"
        android:layout_gravity="top|center"
        android:text="@string/code_of_conduct"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/home"/>
    <TextView
        android:gravity="center"
        android:text="@string/secrets_rules"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:fontFamily="@font/secret"/>
    <TextView
        android:gravity="center"
        android:text="@string/secrets_warning"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="bottom|center"
        android:fontFamily="@font/secret"
        android:layout_marginBottom="50dp"/>

</FrameLayout>