<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/focus"
            android:layout_centerHorizontal="true"
            android:text="@string/tag"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/round_start"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:gravity="center"
            android:textColorHint="#60FFFFFF"
            android:hint="name" />

    <ImageButton
        android:id="@+id/nameNext"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/ic_baseline_arrow_forward_24"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/todo" />

</FrameLayout>